--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 9003
+  port: 9004
   tomcat:
     threads:
       max: 10
@@ -14,7 +14,7 @@ management:
 
 fhir:
   server:
-    name: FHIR Facade
+    name: FHIR Care Services Directory
     baseUrl: http://lb-fhir-facade-926707562.eu-west-2.elb.amazonaws.com/FHIR/R4
     version: 1.0.1
 
