--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,9 +14,9 @@ management:
 
 fhir:
   server:
-    name: FHIR Care Services Directory
-    baseUrl: http://lb-fhir-facade-926707562.eu-west-2.elb.amazonaws.com/FHIR/R4
-    version: 1.0.1
+    name: FHIR Care Services Directory and Care Teams Management
+    baseUrl: http://lb-fhir-mcsd-1736981144.eu-west-2.elb.amazonaws.com
+    version: 1.0.3
 
 ###Remote terminology validation:
 
