--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.7.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>uk.nhs.nhsdigital</groupId>
+    <groupId>uk.nhs.england</groupId>
     <artifactId>iops-fhir-mscd</artifactId>
     <version>1.1.0</version>
     <name>iops-fhir-mcsd</name>
