--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,9 +14,9 @@ management:
 
 fhir:
   server:
-    name: Care Directories
+    name: Care Directory Services
     baseUrl: https://3cdzg7kbj4.execute-api.eu-west-2.amazonaws.com/poc/caredirectories
-    version: 3.2.7
+    version: 7.6.0
 
 ###Remote terminology validation:
 
